--- a/dark-portal-countdown.html
+++ b/dark-portal-countdown.html
@@ -1,67 +1,90 @@
+<!DOCTYPE html>
+<html lang="de">
+<head>
+<meta charset="UTF-8">
+<title>Dark Portal Countdown</title>
+<style>
+    html, body {
+        margin: 0;
+        padding: 0;
+        height: 100%;
+        font-family: "Trajan Pro", "Cinzel", serif;
+        background: black;
+    }
+
+    body {
+        background-image: url("A_2D_digital_illustration_of_the_Dark_Portal_to_Ou.png");
+        background-size: cover;
+        background-position: center;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        color: #7CFF00;
+        text-shadow: 0 0 15px #00ff66, 0 0 30px #003300;
+    }
+
+    .overlay {
+        background: rgba(0, 0, 0, 0.55);
+        padding: 40px 60px;
+        border: 3px solid #1aff00;
+        border-radius: 12px;
+        box-shadow: 0 0 40px #00ff66;
+        text-align: center;
+    }
+
+    h1 {
+        font-size: 48px;
+        margin-bottom: 20px;
+        letter-spacing: 3px;
+    }
+
+    #countdown {
+        font-size: 64px;
+        font-weight: bold;
+        letter-spacing: 4px;
+    }
+
+    .subtitle {
+        margin-top: 20px;
+        font-size: 20px;
+        opacity: 0.85;
+    }
+</style>
+</head>
+<body>
+
+<div class="overlay">
+    <h1>DAS DUNKLE PORTAL ÖFFNET SICH IN</h1>
+    <div id="countdown">--:--:--</div>
+    <div class="subtitle">Bis Mitternacht</div>
+</div>
+
 <script>
-const canvas = document.getElementById("felParticles");
-const ctx = canvas.getContext("2d");
+function updateCountdown() {
+    const now = new Date();
+    const midnight = new Date();
+    midnight.setHours(24, 0, 0, 0);
 
-let particles = [];
-const particleCount = 120;
+    const diff = midnight - now;
 
-function resizeCanvas() {
-    canvas.width = window.innerWidth;
-    canvas.height = window.innerHeight;
-}
-window.addEventListener("resize", resizeCanvas);
-resizeCanvas();
-
-class FelParticle {
-    constructor() {
-        this.reset();
+    if (diff <= 0) {
+        document.getElementById("countdown").innerHTML = "JETZT!";
+        return;
     }
 
-    reset() {
-        this.x = Math.random() * canvas.width;
-        this.y = Math.random() * canvas.height;
-        this.size = Math.random() * 3 + 1;
-        this.speedY = Math.random() * 0.6 + 0.2;
-        this.speedX = (Math.random() - 0.5) * 0.4;
-        this.alpha = Math.random() * 0.6 + 0.2;
-    }
+    const hours = Math.floor(diff / (1000 * 60 * 60));
+    const minutes = Math.floor((diff / (1000 * 60)) % 60);
+    const seconds = Math.floor((diff / 1000) % 60);
 
-    update() {
-        this.y -= this.speedY;
-        this.x += this.speedX;
-
-        if (this.y < -10 || this.x < -10 || this.x > canvas.width + 10) {
-            this.reset();
-            this.y = canvas.height + 10;
-        }
-    }
-
-    draw() {
-        ctx.beginPath();
-        ctx.arc(this.x, this.y, this.size, 0, Math.PI * 2);
-        ctx.fillStyle = `rgba(124, 255, 0, ${this.alpha})`;
-        ctx.shadowColor = "#00ff66";
-        ctx.shadowBlur = 12;
-        ctx.fill();
-    }
+    document.getElementById("countdown").innerHTML =
+        String(hours).padStart(2, "0") + ":" +
+        String(minutes).padStart(2, "0") + ":" +
+        String(seconds).padStart(2, "0");
 }
 
-function initParticles() {
-    particles = [];
-    for (let i = 0; i < particleCount; i++) {
-        particles.push(new FelParticle());
-    }
-}
-
-function animate() {
-    ctx.clearRect(0, 0, canvas.width, canvas.height);
-    particles.forEach(p => {
-        p.update();
-        p.draw();
-    });
-    requestAnimationFrame(animate);
-}
-
-initParticles();
-animate();
+updateCountdown();
+setInterval(updateCountdown, 1000);
 </script>
+
+</body>
+</html>
